@@ -1,7 +1,6 @@
 bin/pyx2graphviz
 Changes
 examples/ex1.pl
-GraphViz.pm
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
@@ -12,6 +11,7 @@ inc/Module/Install/ReadmeFromPod.pm
 inc/Module/Install/Scripts.pm
 inc/Module/Install/Win32.pm
 inc/Module/Install/WriteAll.pm
+lib/PYX/GraphViz.pm
 LICENSE
 Makefile.PL
 MANIFEST			This list of files
